[package]
name = "tiny-hderive"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"
description = "Tiny BIP44/BIP32 derivation for BIP39 seeds"
documentation = "https://docs.rs/tiny-hderive"
homepage = "https://github.com/maciejhirsz/tiny-hderive"
repository = "https://github.com/maciejhirsz/tiny-hderive"
keywords = ["bitcoin", "ethereum", "bip32", "bip39", "bip44"]

[dependencies]
libsecp256k1 = { git = "https://github.com/broxus/libsecp256k1.git" }
base58 = "0.1"
sha2 = "0.9"
hmac = "0.11"
memzero = "0.1"

[dev-dependencies]
ethsign = "0.8"
tiny-bip39 = "0.8"
